add page in some company's api
